@@ -1,37 +1,16 @@
+% $Id$
 % compile 3 times: latex tex4ht-ooffice
 %      htlatex tex4ht-ooffice "xhtml,4,sections+"
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-ooffice.tex                                     %
-% Copyright (C) 2001--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2001--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 
 %%%%%%%%%%%%%%%%%% load style files %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \ifx \HTML\UnDef
-   \def\HTML{ooffice,ooffice-mml}                   
+   \def\HTML{ooffice,ooffice-mml}
    \def\PREAMBLE{%
       \usepackage{url}%
       \usepackage{hyperref}%
@@ -45,29 +24,8 @@
 \fi
 
 
-
-%%%%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-
-
-
-
-
-
+\input{common}
+\input{tex4ht-cpright}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{The Code}
@@ -136,56 +94,25 @@ tail>>>
 %%%%%%%%%%%%%%%%%%%%%%
 
 \<ooffice\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% ooffice.4ht                           |version %
+% ooffice.4ht (|version), generated from |jobname.tex
 |<copy right notice|>  >>>
 
 \<ooffice-math\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% ooffice-math.4ht                      |version %
+% ooffice-math.4ht (|version), generated from |jobname.tex
 |<copy right notice|>  >>>
 
 
 \<ooffice-mml\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% ooffice-mml.4ht                       |version %
+% ooffice-mml.4ht (|version), generated from |jobname.tex
 |<copy right notice|>  >>>
 
 
-
 \<copy right notice\><<<
-% Copyright (C) |CopyYear.2001.       Maarten Wisse           %
-%                                James Naughton          %
-%                                Eitan M. Gurari         %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                    Maarten.Wisse@urz.uni-heidelberg.de %
-%                         http://home.wanadoo.nl/pmwisse %
-%                                                        %
-%             james.naughton@st-edmund-hall.oxford.ac.uk %
-%                                                        %
-%                              gurari@cse.ohio-state.edu %
-%                  http://www.cse.ohio-state.edu/~gurari %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version |version}
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.2001. Maarten Wisse, James Naughton, Eitan M. Gurari
+% Maarten.Wisse@urz.uni-heidelberg.de, http://home.wanadoo.nl/pmwisse
+% james.naughton@st-edmund-hall.oxford.ac.uk
+|<TeX4ht copywrite|>
 >>>
 
 \<configure ooffice tex4ht\><<<
@@ -11873,4 +11800,3 @@ META-INF/manifest.xml - a list of all these files, plus any others used in the d
 
 
 \endinput
-
